src/test/ui/self/elision/ref-self-async.stderr
warning: lifetime parameter `'_` never used
  --> $DIR/ref-self-async.rs:22:23
   |
LL |     async fn ref_self(&self, f: &u32) -> &u32 {
   |                       ^
   |
   = note: `#[warn(unused_lifetimes)]` on by default

warning: lifetime parameter `'_` never used
  --> $DIR/ref-self-async.rs:22:33
   |
LL |     async fn ref_self(&self, f: &u32) -> &u32 {
   |                                 ^

warning: lifetime parameter `'_` never used
  --> $DIR/ref-self-async.rs:22:42
   |
LL |     async fn ref_self(&self, f: &u32) -> &u32 {
   |                       ----------         ^
   |                       |
   |                       help: elide the unused lifetime

warning: lifetime parameter `'_` never used
  --> $DIR/ref-self-async.rs:28:29
   |
LL |     async fn ref_Self(self: &Self, f: &u32) -> &u32 {
   |                             ^

warning: lifetime parameter `'_` never used
  --> $DIR/ref-self-async.rs:28:39
   |
LL |     async fn ref_Self(self: &Self, f: &u32) -> &u32 {
   |                                       ^

warning: lifetime parameter `'_` never used
  --> $DIR/ref-self-async.rs:28:48
   |
LL |     async fn ref_Self(self: &Self, f: &u32) -> &u32 {
   |                             ----------         ^
   |                             |
   |                             help: elide the unused lifetime

warning: lifetime parameter `'_` never used
  --> $DIR/ref-self-async.rs:32:37
   |
LL |     async fn box_ref_Self(self: Box<&Self>, f: &u32) -> &u32 {
   |                                     ^

warning: lifetime parameter `'_` never used
  --> $DIR/ref-self-async.rs:32:48
   |
LL |     async fn box_ref_Self(self: Box<&Self>, f: &u32) -> &u32 {
   |                                                ^

warning: lifetime parameter `'_` never used
  --> $DIR/ref-self-async.rs:32:57
   |
LL |     async fn box_ref_Self(self: Box<&Self>, f: &u32) -> &u32 {
   |                                     -----------         ^
   |                                     |
   |                                     help: elide the unused lifetime

warning: lifetime parameter `'_` never used
  --> $DIR/ref-self-async.rs:36:48
   |
LL |     async fn pin_ref_Self(self: Pin<&Self>, f: &u32) -> &u32 {
   |                                                ^

warning: lifetime parameter `'_` never used
  --> $DIR/ref-self-async.rs:36:37
   |
LL |     async fn pin_ref_Self(self: Pin<&Self>, f: &u32) -> &u32 {
   |                                     ^

warning: lifetime parameter `'_` never used
  --> $DIR/ref-self-async.rs:36:57
   |
LL |     async fn pin_ref_Self(self: Pin<&Self>, f: &u32) -> &u32 {
   |                                     -----------         ^
   |                                     |
   |                                     help: elide the unused lifetime

warning: lifetime parameter `'_` never used
  --> $DIR/ref-self-async.rs:40:57
   |
LL |     async fn box_box_ref_Self(self: Box<Box<&Self>>, f: &u32) -> &u32 {
   |                                                         ^

warning: lifetime parameter `'_` never used
  --> $DIR/ref-self-async.rs:40:45
   |
LL |     async fn box_box_ref_Self(self: Box<Box<&Self>>, f: &u32) -> &u32 {
   |                                             ^

warning: lifetime parameter `'_` never used
  --> $DIR/ref-self-async.rs:40:66
   |
LL |     async fn box_box_ref_Self(self: Box<Box<&Self>>, f: &u32) -> &u32 {
   |                                             ------------         ^
   |                                             |
   |                                             help: elide the unused lifetime

warning: lifetime parameter `'_` never used
  --> $DIR/ref-self-async.rs:44:57
   |
LL |     async fn box_pin_ref_Self(self: Box<Pin<&Self>>, f: &u32) -> &u32 {
   |                                                         ^

warning: lifetime parameter `'_` never used
  --> $DIR/ref-self-async.rs:44:45
   |
LL |     async fn box_pin_ref_Self(self: Box<Pin<&Self>>, f: &u32) -> &u32 {
   |                                             ^

warning: lifetime parameter `'_` never used
  --> $DIR/ref-self-async.rs:44:66
   |
LL |     async fn box_pin_ref_Self(self: Box<Pin<&Self>>, f: &u32) -> &u32 {
   |                                             ------------         ^
   |                                             |
   |                                             help: elide the unused lifetime

warning: lifetime parameter `'_` never used
  --> $DIR/ref-self-async.rs:48:44
   |
LL |     async fn wrap_ref_Self_Self(self: Wrap<&Self, Self>, f: &u8) -> &u8 {
   |                                            ^

warning: lifetime parameter `'_` never used
  --> $DIR/ref-self-async.rs:48:61
   |
LL |     async fn wrap_ref_Self_Self(self: Wrap<&Self, Self>, f: &u8) -> &u8 {
   |                                                             ^

warning: lifetime parameter `'_` never used
  --> $DIR/ref-self-async.rs:48:69
   |
LL |     async fn wrap_ref_Self_Self(self: Wrap<&Self, Self>, f: &u8) -> &u8 {
   |                                            -----------------        ^
   |                                            |
   |                                            help: elide the unused lifetime

error[E0623]: lifetime mismatch
  --> $DIR/ref-self-async.rs:22:42
   |
LL |     async fn ref_self(&self, f: &u32) -> &u32 {
   |                       -----              ^^^^
   |                       |                  |
   |                       |                  ...but data from `f` is returned here
   |                       this parameter and the return type are declared with different lifetimes...

error[E0623]: lifetime mismatch
  --> $DIR/ref-self-async.rs:28:48
   |
LL |     async fn ref_Self(self: &Self, f: &u32) -> &u32 {
   |                             -----              ^^^^
   |                             |                  |
   |                             |                  ...but data from `f` is returned here
   |                             this parameter and the return type are declared with different lifetimes...

error[E0623]: lifetime mismatch
  --> $DIR/ref-self-async.rs:32:57
   |
LL |     async fn box_ref_Self(self: Box<&Self>, f: &u32) -> &u32 {
   |                                     -----               ^^^^
   |                                     |                   |
   |                                     |                   ...but data from `f` is returned here
   |                                     this parameter and the return type are declared with different lifetimes...

error[E0623]: lifetime mismatch
  --> $DIR/ref-self-async.rs:36:57
   |
LL |     async fn pin_ref_Self(self: Pin<&Self>, f: &u32) -> &u32 {
   |                                     -----               ^^^^
   |                                     |                   |
   |                                     |                   ...but data from `f` is returned here
   |                                     this parameter and the return type are declared with different lifetimes...

error[E0623]: lifetime mismatch
  --> $DIR/ref-self-async.rs:40:66
   |
LL |     async fn box_box_ref_Self(self: Box<Box<&Self>>, f: &u32) -> &u32 {
   |                                             -----                ^^^^
   |                                             |                    |
   |                                             |                    ...but data from `f` is returned here
   |                                             this parameter and the return type are declared with different lifetimes...

error[E0623]: lifetime mismatch
  --> $DIR/ref-self-async.rs:44:66
   |
LL |     async fn box_pin_ref_Self(self: Box<Pin<&Self>>, f: &u32) -> &u32 {
   |                                             -----                ^^^^
   |                                             |                    |
   |                                             |                    ...but data from `f` is returned here
   |                                             this parameter and the return type are declared with different lifetimes...

error[E0623]: lifetime mismatch
  --> $DIR/ref-self-async.rs:48:69
   |
LL |     async fn wrap_ref_Self_Self(self: Wrap<&Self, Self>, f: &u8) -> &u8 {
   |                                            -----                    ^^^
   |                                            |                        |
   |                                            |                        ...but data from `f` is returned here
   |                                            this parameter and the return type are declared with different lifetimes...

error: aborting due to 7 previous errors

